--- a/data/configs/tmux-basic.conf
+++ b/data/configs/tmux-basic.conf
@@ -1,3 +1,10 @@
+---
+toolName: "Tmux"
+author: "gpakosz"
+description: "A clean and functional Tmux setup. Features a nice status bar, vi-style keybindings for pane navigation, and mouse support."
+version: "1.0.0"
+repositoryUrl: "https://github.com/gpakosz/.tmux"
+---
 # .tmux.conf - A clean and functional Tmux setup
 # Features a nice status bar, vi-style keybindings for pane navigation, and mouse support
 
