--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
     "@google/genai": "^1.10.0",
     "@tailwindcss/postcss": "^4.1.11",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "gray-matter": "^4.0.3",
+    "buffer": "^6.0.3"
   },
   "devDependencies": {
+    "@vitejs/plugin-react": "^4.3.1",
     "@types/node": "^22.14.0",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
