--- a/data/configs/Vagrantfile
+++ b/data/configs/Vagrantfile
@@ -1,3 +1,10 @@
+---
+toolName: "Vagrantfile"
+author: ""
+description: ""
+version: "0.0"
+repositoryUrl: "https://github.com/"
+---
 # -*- mode: ruby -*-
 # vi: set ft=ruby :
 
