--- a/package.json
+++ b/package.json
@@ -12,16 +12,17 @@
   "dependencies": {
     "@google/genai": "^1.10.0",
     "@tailwindcss/postcss": "^4.1.11",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
+    "buffer": "^6.0.3",
     "gray-matter": "^4.0.3",
-    "buffer": "^6.0.3"
+    "lucide-react": "^0.525.0",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0"
   },
   "devDependencies": {
-    "@vitejs/plugin-react": "^4.3.1",
     "@types/node": "^22.14.0",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
+    "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.11",
