--- a/data/configs/alacritty/1.0.0/alacritty.toml
+++ b/data/configs/alacritty/1.0.0/alacritty.toml
@@ -3,10 +3,10 @@ displayName: Alacritty
 toolName: Alacritty
 author: alacritty
 description: A cross-platform, OpenGL terminal emulator.
-tags: []
+tags: [terminal, gpu, shaders, rust]
 version: 0.15.1
 repositoryUrl: https://github.com/alacritty/alacritty
-relatedConfigs: ''
+relatedConfigs: 'alacritty-theme.toml'
 lastModified: '2025-07-21T09:10:44.640376Z'
 ---
 
